<resources>

    <string name="app_name">eoe</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- 侧边栏按钮 -->
    <string name="button_setting">设置</string>
    <string name="button_feedback">反馈</string>
    <string name="button_about">关于</string>

    <!-- 侧边栏菜单 -->
    <string name="menuGood">社区精选</string>
    <string name="menuNews">新闻资讯</string>
    <string name="menuStudio">学习教程</string>
    <string name="menuBlog">社区博客</string>

    <!-- 详情菜单 -->
    <string name="DetailsGood">太棒了</string>
    <string name="DetailsBed">一般般</string>
    <string name="DetailsCollect">收藏</string>
    <string name="DetailsShare">分享</string>
    <string name="DetailsDiscuss">评论</string>

    <!-- 用户中心 -->
    <string name="user_center">个人中心</string>
    <string name="user_login_alert">你终于来啦，快登录吧</string>
    <string name="user_key_alert">输入你的密钥</string>
    <string name="user_bind_btn">绑定</string>
    <string name="user_qr_scan_btn">二维码扫描登陆</string>
    <string name="user_alert">请在web端登陆后，寻找你的密钥：\nhttp://my.eoe.cn/admin/profile/auth.html\n会员中心>设置>客户端密钥（如下图）</string>
    <string name="user_button_alert">登陆后，你可以享有以下功能</string>
    <string name="user_level_alert">社区勋章</string>
    <string name="user_login_another">换一种方式登录</string>
    <string name="user_logout">注销</string>

    <!-- 登录 -->
    <string name="user_title">eoe</string>
    <string name="user_cancel">取消</string>
    <string name="user_remember">记住密码</string>
    <string name="user_enter">立即登录</string>
    <string name="user_user_empty">用户名不能为空!</string>
    <string name="user_pwd_empty">密码不能为空!</string>
    <string name="user_login_prompt">请先登录</string>
    <string name="user_login_enter_key">请先输入密钥</string>

    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="press_again_exit">再按一次退出</string>

    <!-- 错误提示 -->
    <string name="httpError">连接失败</string>
    <string name="httpisNull">没有网络</string>
    <string name="user_center_error">请先登录再进入用户中心</string>
    <string name="user_username">输入用户名</string>
    <string name="user_pwd">输入密码</string>
    <string name="user_login_error">用户名或者密码错误!</string>
    <string name="user_loginKey_error">错误密钥!</string>
    <string name="user_loginInfo_error">获取信息失败，\n请尝试重新登录。</string>
    <string name="about">关于我们</string>
    <string name="about_title">名称:eoe\n版本:1.1.0\n基于:www.eoe.cn</string>
    <string name="about_intro">[应用简介]\neoe客户端是一款专为移动开发者提供帮助的软件。依靠www.eoe.cn开发者社区，将高质量的移动开发资讯、学习教程、代码库等信息提供给移动开发者，以方便大家能更好更快的学习移动开发的相关知识，尽快成长。</string>
    <string name="about_story">[应用故事]\neoe的理念是‘让移动开发更简单’，如何让移动开发者更简单是我们不断思考和探索的，我们认为有组织、有体系的内容对开发者的学习和成长都是最有价值的，于是大家都希望有这么一款让我们零碎时间里学习到最有价值的知识，于是eoe客户端诞生了!</string>
    <string name="about_thanks">[致谢]\neoe客户端里边的内容资源都是由eoe开发者社区的忠实用户所提供的，并由eoe开发者社区开发进行组织和展示，感谢其中包括的所有人，感谢你们提供的内容，有了你们eoe会更精彩！</string>
    <string name="about_opensource">[开源]\neoe客户端代码已经完全开源，欢迎每个eoer们参与, 详情情况请关注社区相关信息, 感谢每一个参与的人和每一行代码, 尤其感谢com360, Anson Yang, jackrex, KingLaw, feicien, kris, kaxi4it, ronanhardiman,lichen228等贡献的代码.</string>


    <string name="about_tontact">联系我们：</string>
    <string name="about_sina"> \@eoe移动开发者社区</string>
    <string name="about_weixin"> eoe_cn</string>

    <!-- 详情页面 -->
    <string name="detail_prompt">写评论</string>
    <string name="detail_enter">发表</string>
    <string name="discuss_succeed">发表成功</string>
    <string name="discuss_fail">发表失败</string>
    <string name="query_prompt">请输入关键字</string>

    <!-- 用户反馈 -->
    <string name="feedback_submit">提交</string>
    <string name="feedback_input_content">请输入您的反馈意见</string>
    <string name="feedback_back">返回</string>

    <!-- 用户中心 -->
    <string name="user_center_get_info_error">获取信息错误</string>
    <string name="user_center_my_Collect">我的收藏</string>
    <string name="user_center_my_Intro">个人简介</string>
    <string name="user_center_exit">退出功能</string>
    <string name="user_center_e_coin">e币:%s</string>
    <string name="user_center_e_reputation">e望:%s</string>
    
    <!-- 二维码扫描 -->
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
</resources>