<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="#2477ab" >

        <ImageView
            android:id="@+id/about_imageview_gohome"
            style="@style/title_right_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_details_gohome" />

        <TextView
            android:id="@+id/textview_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="关于"
            android:textColor="#fff"
            android:textSize="20sp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_intro"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_story"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_thanks"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="12dp"
                android:text="@string/about_opensource"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/about_tontact"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/about_textview_weibo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="3dp"
                android:drawableLeft="@drawable/dis_about_sina"
                android:text="@string/about_sina"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/about_textview_weixin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:drawableLeft="@drawable/dis_about_weixin"
                android:text="@string/about_weixin"
                android:textColor="#000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/dis_about_logo" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>