<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >

    <include layout="@layout/details_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <include layout="@layout/loading_layout" />

        <include layout="@layout/load_failed_layout" />

        <WebView
            android:id="@+id/detail_webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f5f5f5"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_bottom_height"
        android:layout_gravity="bottom"
        android:background="@drawable/back_behind_menu"
        android:orientation="horizontal" >

        <cn.eoe.app.widget.CustomButton
            android:id="@+id/rlGood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            Image="@drawable/button_details_good_default"
            ImageID="@+id/imageview_details_good"
            Text="@string/DetailsGood"
            TextID="@+id/textview_details_good"
            android:background="@drawable/back_button_default_style"
            android:clickable="true" >
        </cn.eoe.app.widget.CustomButton>

        <cn.eoe.app.widget.CustomButton
            android:id="@+id/rlBed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            Image="@drawable/button_details_bed_default"
            ImageID="@+id/imageview_details_bed"
            Text="@string/DetailsBed"
            TextID="@+id/textview_details_bed"
            android:background="@drawable/back_button_default_style"
            android:clickable="true" >
        </cn.eoe.app.widget.CustomButton>

        <cn.eoe.app.widget.CustomButton
            android:id="@+id/rlCollect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            Image="@drawable/button_details_collect_default"
            ImageID="@+id/imageview_details_collect"
            Text="@string/DetailsCollect"
            TextID="@+id/textview_details_collect"
            android:background="@drawable/back_button_default_style"
            android:clickable="true" >
        </cn.eoe.app.widget.CustomButton>

        <cn.eoe.app.widget.CustomButton
            android:id="@+id/rlShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            Image="@drawable/button_details_share_default"
            ImageID="@+id/imageview_details_share"
            Text="@string/DetailsShare"
            TextID="@+id/textview_details_share"
            android:background="@drawable/back_button_default_style"
            android:clickable="true" >
        </cn.eoe.app.widget.CustomButton>

        <cn.eoe.app.widget.CustomButton
            android:id="@+id/rlDiscuss"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            Image="@drawable/button_details_discuss_default"
            ImageID="@+id/imageview_details_discuss"
            Text="@string/DetailsDiscuss"
            TextID="@+id/textview_details_discuss"
            android:background="@drawable/back_button_default_style"
            android:clickable="true" >
        </cn.eoe.app.widget.CustomButton>
    </LinearLayout>

</LinearLayout>