<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/umeng_fb_rootId" android:background="#EFEFEF">

	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="50dip" android:background="@drawable/umeng_fb_bar_bg">

	    <TextView
		    android:id="@+id/umeng_fb_goback_btn"
		    android:layout_width="60dip" android:layout_height="35dip"
		    android:layout_alignBottom="@+id/umeng_fb_see_list_btn"
		    android:layout_alignParentLeft="true" android:layout_marginLeft="14dp"
		    android:background="@drawable/umeng_fb_submit_selector"
		    android:gravity="center" android:text="@string/feedback_back"
		    android:textColor="#FFFFFF" />		
		    
		<TextView android:id="@+id/umeng_fb_conversation_title"
			android:layout_width="fill_parent" android:textColor="#565656"
			android:layout_height="50dip" android:layout_gravity="center"
			android:gravity="center" android:text="@string/UMFeedbackConversationTitle" android:textSize="22dip" />
	    
		<ImageButton android:id="@+id/umeng_fb_see_list_btn"
			android:layout_marginRight="10dip" android:layout_centerVertical="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:background="@drawable/umeng_fb_see_list_selector" />

	</RelativeLayout>
	<EditText android:id="@+id/umeng_fb_content"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:layout_marginLeft="9dip" android:layout_marginRight="9dip"
		android:layout_marginTop="7dip" android:layout_marginBottom="2dip"
		android:paddingLeft="9dip" android:paddingTop="10dip"
		android:layout_weight="1.0" android:maxEms="10" android:minEms="10"
		android:hint="@string/feedback_input_content" android:gravity="top" android:textColor="#737373" />

<!-- 用户反馈定制化 “友盟反馈”还支持反馈信息的定制化，以便在反馈页面中收集额外信息。开发者可以在此添加需要收集的用户信息。

 	  <RelativeLayout android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="55dip"
        android:layout_marginTop="2dip">
        <EditText android:id="@+id/feedback_name"
            android:layout_width="100dip" android:layout_height="wrap_content"
            android:layout_marginLeft="9dip" android:layout_marginRight="9dip"
            android:layout_marginTop="7dip" android:layout_marginBottom="2dip"
            android:paddingLeft="9dip" android:paddingTop="10dip"
            android:layout_weight="1.0" android:maxEms="10" android:minEms="10"
            android:hint="姓名" android:gravity="top" android:textColor="#737373" />
        <EditText android:id="@+id/feedback_email"
            android:layout_toRightOf="@+id/feedback_name"
            android:layout_width="100dip" android:layout_height="wrap_content"
            android:layout_marginLeft="9dip" android:layout_marginRight="9dip"
            android:layout_marginTop="7dip" android:layout_marginBottom="2dip"
            android:paddingLeft="9dip" android:paddingTop="10dip"
            android:layout_weight="1.0" android:maxEms="10" android:minEms="10"
            android:hint="Email" android:gravity="top" android:textColor="#737373" />
        <EditText android:id="@+id/feedback_phone"
            android:layout_toRightOf="@+id/feedback_email"
            android:layout_width="100dip" android:layout_height="wrap_content"
            android:layout_marginLeft="9dip" android:layout_marginRight="9dip"
            android:layout_marginTop="7dip" android:layout_marginBottom="2dip"
            android:paddingLeft="9dip" android:paddingTop="10dip"
            android:layout_weight="1.0" android:maxEms="10" android:minEms="10"
            android:hint="电话" android:gravity="top" android:textColor="#737373" />
         <EditText android:id="@+id/feedback_qq"
            android:layout_toRightOf="@+id/feedback_phone"
            android:layout_width="100dip" android:layout_height="wrap_content"
            android:layout_marginLeft="9dip" android:layout_marginRight="9dip"
            android:layout_marginTop="7dip" android:layout_marginBottom="2dip"
            android:paddingLeft="9dip" android:paddingTop="10dip"
            android:layout_weight="1.0" android:maxEms="10" android:minEms="10"
            android:hint="QQ" android:gravity="top" android:textColor="#737373" />
    </RelativeLayout>
 -->    
	
	<RelativeLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="55dip"
		android:layout_marginTop="2dip">
		<Spinner android:id="@+id/umeng_fb_age_spinner"
			android:layout_alignParentLeft="true" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginLeft="8dip"
			android:layout_centerVertical="true" />
		<Spinner android:id="@+id/umeng_fb_gender_spinner"
			android:layout_toRightOf="@id/umeng_fb_age_spinner"
			android:layout_marginLeft="7dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerVertical="true" />
		<TextView android:id="@+id/umeng_fb_submit"
			android:background="@drawable/umeng_fb_submit_selector"
			android:layout_alignParentRight="true" android:layout_width="70dip"
			android:layout_height="43dip" android:text="@string/feedback_submit" android:gravity="center"
			android:layout_alignBaseline="@id/umeng_fb_age_spinner"
			android:textColor="#FFFFFF" android:layout_marginRight="8dip" />
	</RelativeLayout>
</LinearLayout>

